samples/_failures_safe/1761221744_14f2d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37be7985.c: In function ‘main’:
./samples/SAFE/__tmp_37be7985.c:136:12: error: missing terminating " character
  136 |     printf("Press Ctrl+D (Linux) or
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_37be7985.c:136:5: error: expected expression at end of input
  136 |     printf("Press Ctrl+D (Linux) or
      |     ^~~~~~
./samples/SAFE/__tmp_37be7985.c:136:5: error: expected declaration or statement at end of input
